Initial methods notebooks

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,4 @@ tests/integration/results/
 experimental/results
 demo/01. Data/QCA_22May19_1.p
 demo/01. Data/QCA_22May19_1_pp.csv
+demo/01. Data/ps.p
