--- a/Pipfile
+++ b/Pipfile
@@ -27,7 +27,7 @@ jupyter = "*"
 pyzmq = "==18.1.1"
 xlrd = "*"
 statsmodels = "*"
-mass-spec-utils = "*"
+mass-spec-utils = "==0.0.8"
 tabulate = "*"
 pytest = "*"
 
