Reorganised test folders

--- a/.gitignore
+++ b/.gitignore
@@ -124,7 +124,7 @@ example_data/
 examples/DsDA/
 scripts/*.bat
 vimms/.idea/
-tests/integration/results/
+tests/results/
 experimental/results
 demo/01. Data/QCA_22May19_1.p
 demo/01. Data/QCA_22May19_1_pp.csv
