working, needs test to be finished and some refactoring

--- a/Pipfile
+++ b/Pipfile
@@ -27,9 +27,10 @@ jupyter = "*"
 pyzmq = "==18.1.1"
 xlrd = "*"
 statsmodels = "*"
-mass-spec-utils = "*"
+mass-spec-utils = "==0.0.10"
 tabulate = "*"
 pytest = "*"
+pysmiles = "*"
 
 [dev-packages]
 pipenv-setup = "*"
