added torch and ax-platform for Bayesian Optimisation

--- a/Pipfile
+++ b/Pipfile
@@ -33,6 +33,8 @@ pytest = "*"
 pysmiles = "*"
 "flake8" = "*"
 intervaltree = "*"
+ax-platform = "*"
+torch = "*"
 
 [dev-packages]
 pipenv-setup = "*"
