Tidy up Pipfile

--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ pandas = "*"
 scipy = "*"
 matplotlib = "*"
 seaborn = "*"
-scikit-learn = "==0.21.3"
+scikit-learn = "*"
 jupyterlab = "*"
 pymzml = "*"
 psims = "*"
@@ -18,29 +18,23 @@ tqdm = "*"
 joblib = "*"
 ipyparallel = "*"
 requests = "*"
-trio = "*"
 loguru = "*"
-pyDOE = "*"
 networkx = "*"
 jsonpickle = "*"
 jupyter = "*"
-pyzmq = "==18.1.1"
-xlrd = "*"
 statsmodels = "*"
-mass-spec-utils = "==0.0.12"
+mass-spec-utils = "*"
 tabulate = "*"
-pytest = "*"
 pysmiles = "*"
-"flake8" = "*"
+pipenv-setup = "*"
+flake8 = "*"
+pytest = "*"
 intervaltree = "*"
 ax-platform = "*"
 torch = "*"
 gpy = "*"
 
 [dev-packages]
-pipenv-setup = "*"
-flake8 = "*"
-pytest = "*"
 
 [requires]
 python_version = "3"
