--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ pandas = "*"
 scipy = "*"
 matplotlib = "*"
 seaborn = "*"
-scikit-learn = "*"
+scikit-learn = "==0.21.3"
 jupyterlab = "*"
 pymzml = "*"
 psims = "*"
