--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ scipy = "*"
 matplotlib = "*"
 seaborn = "*"
 scikit-learn = "==0.21.3"
-jupyterlab = "*"
+jupyterlab = "==2.3.1"
 pymzml = "*"
 psims = "*"
 events = "*"
