--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ pandas = "*"
 scipy = "*"
 matplotlib = "*"
 seaborn = "*"
-scikit-learn = "==0.21.3"
+scikit-learn = "*"
 jupyterlab = "==2.3.1"
 pymzml = "*"
 psims = "*"
