--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,4 @@ demo/01. Data/QCA_22May19_1.p
 demo/01. Data/QCA_22May19_1_pp.csv
 demo/01. Data/ps.p
 
+experimental/Beer_multibeers_1_fullscan1.mzML
