Reverted pymzml to previous version for issue #221

--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ matplotlib = "*"
 seaborn = "*"
 scikit-learn = "*"
 jupyterlab = "*"
-pymzml = "*"
+pymzml = "==2.4.7"
 psims = "*"
 events = "*"
 tqdm = "*"
