Smal update to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,6 @@ demo/01. Data/QCA_22May19_1_pp.csv
 demo/01. Data/ps.p
 
 experimental/Beer_multibeers_1_fullscan1.mzML
+examples/01. vimms (Wandy et al 2019)/example_data.zip
+examples/01. vimms (Wandy et al 2019)/supporting_files.zip
+examples/01. vimms (Wandy et al 2019)/supporting_files/
