--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,14 @@ theme:
 
 plugins:
 - search
-- mkdocstrings
+- mkdocstrings:
+    handlers:
+        python:
+            setup_commands:
+                - import sys
+                - sys.path.append('../')
+            selection:
+                new_path_syntax: true
 
 nav:
   - Home: README.md
