--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -18,4 +18,4 @@ formats: all
 # Explicitly set the version of Python and its requirements
 python:
   install:
-    - requirements: docs/requirements.txt
+    - requirements: requirements.txt
