--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,7 @@ tabulate = "*"
 pysmiles = "*"
 pipenv-setup = "*"
 flake8 = "*"
+autopep8 = "*"
 pytest = "*"
 intervaltree = "*"
 jupyterlab = "*"
