--- a/Pipfile
+++ b/Pipfile
@@ -28,6 +28,7 @@ pipenv-setup = "*"
 flake8 = "*"
 autopep8 = "*"
 pytest = "*"
+pytest-cov = "*"
 intervaltree = "*"
 jupyterlab = "*"
 ipywidgets = "*"
