--- a/requirements.txt
+++ b/requirements.txt
@@ -117,6 +117,7 @@ pyparsing==2.4.7
 pyrsistent==0.18.0
 pysmiles==1.0.1
 pytest==6.2.5
+pytest-cov=2.12.1
 python-dateutil==2.8.2
 pytkdocs==0.11.1
 pytz==2021.1
