Various fixes for tests (+4 squashed commits) Squashed commits: [f50f79c] Separated out long-running tests [4df45e2] Added numba and numba_stats to setup.py [4417413] Fixed for broken tests [6147457] Added missing dependencies

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ numpy = "*"
 pandas = "*"
 scipy = "*"
 matplotlib = "*"
+numba = "*"
+numba-stats = "*"
 seaborn = "*"
 plotly = "*"
 scikit-learn = "*"
