--- a/requirements.txt
+++ b/requirements.txt
@@ -72,6 +72,8 @@ mkdocs-autorefs==0.2.1
 mkdocstrings==0.15.2
 molmass==2021.6.18
 more-itertools==8.4.0
+numba==0.55.1
+numba-stats==1.1.0
 nbclassic==0.3.2
 nbclient==0.5.4
 nbconvert==6.1.0
