--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -17,15 +17,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.7
+    - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
-        python-version: '3.7'
+        python-version: '3.8'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pipenv
-        pipenv install --dev
+        pipenv install --dev --python 3.8
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
