--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,9 @@ networkx = "*"
 jsonpickle = "*"
 statsmodels = "*"
 mass-spec-utils = "*"
+brain-isotopic-distribution = "*"
+ms_peak_picker = "*"
+ms_deisotope = "*"
 tabulate = "*"
 pysmiles = "*"
 pipenv-setup = "*"
