--- a/environment.yml
+++ b/environment.yml
@@ -37,3 +37,6 @@ dependencies:
     - mass-spec-utils
     - pysmiles
     - numba-stats
+    - brain-isotopic-distribution
+    - ms_peak_picker
+    - ms_deisotope
