--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,8 +6,6 @@
 version: 2
 
 # Build documentation with MkDocs
-#mkdocs:
-#  configuration: mkdocs.yml
 mkdocs:
   configuration: mkdocs.yml
   fail_on_warning: false
@@ -15,7 +13,6 @@ mkdocs:
 # Optionally build your docs in additional formats such as PDF and ePub
 formats: all
 
-# Explicitly set the version of Python and its requirements
-python:
-  install:
-    - requirements: requirements.txt
+# Specify the Conda environment file
+conda:
+  environment: environment.yml
