Updated sidebar links

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,7 @@ remote_theme: just-the-docs/just-the-docs
 nav_external_links:
   - title: Documentation
     url: https://vimms.readthedocs.io
-    hide_icon: false # set to true to hide the external link icon - defaults to false
+  - title: Demonstration codes
+    url: https://github.com/glasgowcompbio/vimms/tree/master/demo
+  - title: Codes for papers
+    url: https://github.com/glasgowcompbio/vimms/tree/master/examples
