--- a/Pipfile
+++ b/Pipfile
@@ -4,50 +4,44 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-numpy = "==1.24.3"
-pandas = "==2.0.3"
-scipy = "==1.11.1"
-matplotlib = "==3.7.2"
-numba = "==0.57.1"
-numba-stats = "==1.3.0"
-seaborn = "==0.12.2"
-plotly = "==5.9.0"
-scikit-learn = "==1.3.0"
-pymzml = "==2.4.7"
-psims = "==1.2.7"
-events = "==0.5"
-tqdm = "==4.65.0"
-joblib = "==1.2.0"
-ipyparallel = "==8.4.1"
-requests = "==2.31.0"
-loguru = "==0.5.3"
-networkx = "==3.1"
-jsonpickle = "==2.2.0"
-statsmodels = "==0.14.0"
-mass-spec-utils = "*"
-brain-isotopic-distribution = "==1.5.14"
-ms-peak-picker = "==0.1.42"
-ms-deisotope = "==0.0.52"
-tabulate = "==0.8.10"
-pysmiles = "==1.1.2"
-pipenv-setup = "*"
-flake8 = "==6.0.0"
-autopep8 = "==1.6.0"
-pytest = "==7.4.0"
-pytest-cov = "==4.1.0"
-intervaltree = "==3.1.0"
-jupyterlab = "==3.6.3"
-ipywidgets = "==8.0.4"
-# gpy = "==1.10.0"
-optuna = "==3.3.0"
-# kaleido = "==0.2.1"
+numpy = ">=1.24.3"
+pandas = ">=2.0.3"
+scipy = ">=1.11.1"
+matplotlib = ">=3.7.2"
+seaborn = ">=0.12.2"
+plotly = ">=5.9.0"
+scikit-learn = ">=1.3.0"
+tqdm = ">=4.65.0"
+joblib = ">=1.2.0"
+ipyparallel = ">=8.4.1"
+requests = ">=2.31.0"
+loguru = ">=0.5.3"
+networkx = ">=3.1"
+jsonpickle = ">=2.2.0"
+statsmodels = ">=0.14.0"
+tabulate = ">=0.8.10"
+intervaltree = ">=3.1.0"
+events = ">=0.5"
+pymzml = ">=2.4.7"
+psims = ">=1.2.7"
+mass-spec-utils = ">=0.0.12"
+pysmiles = ">=1.1.2"
+numba = ">=0.57.1"
+numba-stats = ">=1.3.0"
+ms-deisotope = ">=0.0.53"
+optuna = ">=3.3.0"
+# gpy = ">=1.10.0"
+# kaleido = ">=0.2.1"
 
 [dev-packages]
-twine = "*"
-build = "*"
-mkdocs = "==1.5.3"
-mkdocstrings = "==0.23.0"
-mkdocstrings-python = "==1.7.0"
+jupyterlab = ">=3.6.3"
+ipywidgets = ">=8.0.4"
+flake8 = ">=6.0.0"
+autopep8 = ">=1.6.0"
+pytest = ">=7.4.0"
+pytest-cov = ">=4.1.0"
+mkdocs = ">=1.5.3"
+mkdocstrings = ">=0.23.0"
 
 [requires]
 python_version = "3.10"
