--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "vimms"
-version = "2.1.3"
+version = "2.1.4"
 description = "A framework to develop, test and optimise fragmentation strategies in LC-MS metabolomics."
 authors = ["Joe Wandy <joe.wandy@glasgow.ac.uk>", "Vinny Davies", "Ross McBride", "Justin J.J. van der Hooft", "Stefan Weidt", "Ronan Daly", "Simon Rogers"]
 license = "MIT"
@@ -15,7 +15,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9,<3.11"
+python = ">=3.9,<3.11"
 numpy = "^1.24.3"
 pandas = "^2.0.3"
 scipy = "^1.11.1"
@@ -33,17 +33,15 @@ jsonpickle = "^2.2.0"
 statsmodels = "^0.14.0"
 tabulate = "^0.8.10"
 intervaltree = "^3.1.0"
-events = "0.5"
-# gpy = "1.10.0"
-pymzml = "2.4.7"
+events = "^0.5"
+# gpy = "^1.10.0"
+pymzml = "^2.4.7"
 psims = "^1.2.7"
-mass-spec-utils = "0.0.12"
+mass-spec-utils = "^0.0.12"
 pysmiles = "^1.1.2"
 numba = "^0.57.1"
 numba-stats = "^1.3.0"
-brain-isotopic-distribution = "^1.5.14"
-ms-peak-picker = "0.1.42"
-ms-deisotope = "0.0.52"
+ms-deisotope = "^0.0.53"
 optuna = "^3.3.0"
 # kaleido = "^0.2.1"
 
