--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,6 +5,11 @@
 # Required
 version: 2
 
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "miniconda3-4.7"
+
 # Build documentation with MkDocs
 mkdocs:
   configuration: mkdocs.yml
